# BankingProject

./: README.md  requirements.txt  setup.cfg
sample/: Account.py  Accounts.py  Banking.py  Customer.py  Customers.py  Employees.py  Menus.py  Persons.py  accounts.csv  customers.csv
src/Banking/: Account.py  AccountFunctions.py  Accounts.py  AccountsList.py  Banking.py  Customer.py  CustomerFunctions.py  Customers.py  Data.py  Employees.py  EmployeesFunctions.py  HelperFunctions.py  ManageVariables.py  Menus.py  Service.py  ServiceFunctions.py  Services.py  UserFunctions.py  UserInteractions.py  Users.py  accounts.csv  accounts.data  ccs.csv  customers.csv  customers.data  loans.csv  services.data
tests/: customers.data  test_Account.py  test_Accounts.py  test_Banking.py  test_Customers.py  test_Data.py  test_Employees.py  test_ManageVariables.py  test_Menus.py  test_Service.py  test_Services.py  test_Users.py
