[metadata]
name = banking-amr
version = 0.0.1
author = Michelle Rogers
author_email = micheknows@gmail.com
description = A small mini banking project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/micheknows/BankingProject
project_urls =
    Bug Tracker = https://github.com/micheknows/BankingProject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: MGNU GENERAL PUBLIC LICENSE
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src